[project]
name = "1609-test-runner"
version = "0.1.0"
description = "IEEE 1609 test runner"
authors = [
    {name = "Davide Pesavento", email = "davide.pesavento@nist.gov"},
]
dependencies = [
    "fabric>=3.2.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "NIST-Software"}


[tool.pdm]
distribution = false
